עכשיו אני שיניתי לדמי ג'ייסון

--- a/package.json
+++ b/package.json
@@ -21,6 +21,16 @@
     "extends": [
       "react-app",
       "react-app/jest"
+    ],
+    "overrides": [
+      {
+        "files": [
+          "**/*.test.js"
+        ],
+        "env": {
+          "jest/globals": true
+        }
+      }
     ]
   },
   "browserslist": {
@@ -34,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "jest": "^27.5.1"
   }
 }
